--- a/other.html
+++ b/other.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>Home - Yamin Hossan</title>
+  <title>Others - Yamin Hossan</title>
 </head>
 <body>
   <header>
@@ -18,12 +18,8 @@
     </nav>
   </header>
   <main>
-    <h2>Premium T-Shirt Designs</h2>
-    <p>এখানে আমার Premium T-shirt design গুলো থাকবে, প্রতিটির সাথে বর্ণনা দেওয়া থাকবে।</p>
-    <div style="float:right;">
-      <p>আমার Fiverr প্রোফাইল:</p>
-      <img src="assets/images/fiverr-qr.png" alt="Fiverr QR" width="150">
-    </div>
+    <h2>Other Business Products</h2>
+    <p>এখানে আমার অন্যান্য প্রোডাক্ট এর তালিকা থাকবে।</p>
   </main>
 </body>
 </html>
