--- a/about.html
+++ b/about.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>About — Yamin Hossan</title>
-<link rel='stylesheet' href='assets/css/style.css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>About - Yamin Hossan</title>
 </head>
 <body>
-<header>
-<div class='logo'>Y</div>
-<h1>Yamin Hossan</h1>
-<nav>
-<a href='index.html'>Home</a>
-<a href='about.html'>About</a>
-<a href='gig.html'>Gig</a>
-<a href='premium.html'>Premium</a>
-<a href='others.html'>Others</a>
-<a href='contact.html'>Contact</a>
-</nav>
-</header>
-<main>
-<h2>About Me</h2>
-<p>এখানে আপনার সম্পর্কে তথ্য থাকবে।</p>
-</main>
-<footer>
-<p>© 2025 Yamin Hossan — All rights reserved.</p>
-</footer>
+  <header>
+    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="gig.html">Gig</a> |
+      <a href="premium.html">Premium</a> |
+      <a href="others.html">Others</a> |
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>About Me</h2>
+    <p><strong>বাংলা:</strong> আমি একজন গ্রাফিক্স ডিজাইনার। আমার ক্যারিয়ার শুরু হয়েছে প্রায় ১ বছর আগে, এবং আমি প্রতিনিয়ত নতুন কিছু শিখছি।</p>
+    <p><strong>English:</strong> I am a graphics designer. I started my career about a year ago and I am continuously learning and growing.</p>
+    <p><strong>العربية:</strong> أنا مصمم جرافيك. بدأت مسيرتي قبل عام تقريبًا، وما زلت أتعلم وأتطور باستمرار.</p>
+  </main>
 </body>
 </html>
