--- a/gig.html
+++ b/gig.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
-<html lang='bn'>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>Gig — T-shirt Designs</title>
-<link rel='stylesheet' href='assets/css/style.css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Gig - Yamin Hossan</title>
 </head>
 <body>
-<header>
-<div class='logo'>Y</div>
-<h1>Yamin Hossan</h1>
-<nav>
-<a href='index.html'>Home</a>
-<a href='about.html'>About</a>
-<a href='gig.html'>Gig</a>
-<a href='premium.html'>Premium</a>
-<a href='others.html'>Others</a>
-<a href='contact.html'>Contact</a>
-</nav>
-</header>
-<main>
-<h2>Gig — T-shirt Designs</h2>
-<p>আপনি চাইলে নিচের ডিজাইনগুলো কাস্টম অর্ডার করতে পারেন।</p>
-<div class='card'>
-<h3>Tee — Minimal Arabic</h3>
-<p>Price: ৳800</p>
-<button>Order</button>
-</div>
-<div class='card'>
-<h3>Tee — Islamic Pattern</h3>
-<p>Price: ৳900</p>
-<button>Order</button>
-</div>
-<div class='card'>
-<h3>Tee — Typography</h3>
-<p>Price: ৳700</p>
-<button>Order</button>
-</div>
-</main>
-<footer>
-<p>© 2025 Yamin Hossan — All rights reserved.</p>
-</footer>
+  <header>
+    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="gig.html">Gig</a> |
+      <a href="premium.html">Premium</a> |
+      <a href="others.html">Others</a> |
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>My Gigs</h2>
+    <p>এখানে আমার টি-শার্ট গিগ ডিজাইনগুলো থাকবে, প্রতিটির সাথে দাম দেওয়া থাকবে।</p>
+    <ul>
+      <li>T-Shirt Design 1 - $20</li>
+      <li>T-Shirt Design 2 - $25</li>
+      <li>T-Shirt Design 3 - $30</li>
+    </ul>
+  </main>
 </body>
 </html>
