--- a/others.html
+++ b/others.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>Others — Yamin Hossan</title>
-<link rel='stylesheet' href='assets/css/style.css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Others - Yamin Hossan</title>
 </head>
 <body>
-<header>
-<div class='logo'>Y</div>
-<h1>Yamin Hossan</h1>
-<nav>
-<a href='index.html'>Home</a>
-<a href='about.html'>About</a>
-<a href='gig.html'>Gig</a>
-<a href='premium.html'>Premium</a>
-<a href='others.html'>Others</a>
-<a href='contact.html'>Contact</a>
-</nav>
-</header>
-<main>
-<h2>Other Works</h2>
-<p>এখানে অন্যান্য কাজের লিস্ট থাকবে।</p>
-</main>
-<footer>
-<p>© 2025 Yamin Hossan — All rights reserved.</p>
-</footer>
+  <header>
+    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="gig.html">Gig</a> |
+      <a href="premium.html">Premium</a> |
+      <a href="others.html">Others</a> |
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Other Business Products</h2>
+    <p>এখানে আমার অন্যান্য প্রোডাক্ট এর তালিকা থাকবে।</p>
+  </main>
 </body>
 </html>
