--- a/about.html
+++ b/about.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About - Yamin Hossan</title>
+  <link rel="stylesheet" href="style.css.text">
 </head>
 <body>
   <header>
-    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <h1 class="logo">YAMIN HOSSAN</h1>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="gig.html">Gig</a> |
-      <a href="premium.html">Premium</a> |
-      <a href="others.html">Others</a> |
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="gig.html">Gig</a>
+      <a href="premium.html">Premium</a>
+      <a href="others.html">Others</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h2>About Me</h2>
-    <p><strong>বাংলা:</strong> আমি একজন গ্রাফিক্স ডিজাইনার। আমার ক্যারিয়ার শুরু হয়েছে প্রায় ১ বছর আগে, এবং আমি প্রতিনিয়ত নতুন কিছু শিখছি।</p>
-    <p><strong>English:</strong> I am a graphics designer. I started my career about a year ago and I am continuously learning and growing.</p>
-    <p><strong>العربية:</strong> أنا مصمم جرافيك. بدأت مسيرتي قبل عام تقريبًا، وما زلت أتعلم وأتطور باستمرار.</p>
+    <section>
+      <h2>About Me</h2>
+      <p><strong>বাংলা:</strong> আমি একজন গ্রাফিক্স ডিজাইনার। আমার যাত্রা শুরু হয়েছে প্রায় ১ বছর আগে। যদিও নতুন, তবে প্রতিদিন নতুন কিছু শেখার চেষ্টা করছি। ভবিষ্যতে আরও দক্ষ হয়ে কাজ করতে চাই।</p>
+      <p><strong>English:</strong> I am a graphics designer. My journey started about a year ago. Although I am new, I am learning more every day. My goal is to improve and grow in this field.</p>
+      <p><strong>العربية:</strong> أنا مصمم جرافيك. بدأت رحلتي منذ حوالي عام. على الرغم من أنني جديد، أحاول أن أتعلم شيئًا جديدًا كل يوم. أطمح أن أصبح أكثر مهارة في المستقبل.</p>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Yamin Hossan — All rights reserved.</p>
+  </footer>
 </body>
 </html>
