--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Yamin Hossan</title>
+  <link rel="stylesheet" href="style.css.text">
 </head>
 <body>
   <header>
-    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <h1 class="logo">YAMIN HOSSAN</h1>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="gig.html">Gig</a> |
-      <a href="premium.html">Premium</a> |
-      <a href="others.html">Others</a> |
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="gig.html">Gig</a>
+      <a href="premium.html">Premium</a>
+      <a href="others.html">Others</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h2>Contact Me</h2>
-    <p>Email: yaminh888@gmail.com</p>
-    <p>Social: Facebook | Instagram | Fiverr</p>
+    <section>
+      <h2>Contact Me</h2>
+      <form>
+        <input type="text" placeholder="Name" required><br>
+        <input type="email" placeholder="Email" required><br>
+        <input type="text" placeholder="Number"><br>
+        <select>
+          <option>General Enquiry</option>
+          <option>Order</option>
+        </select><br>
+        <textarea placeholder="Enter your message..."></textarea><br>
+        <button type="submit">Submit</button>
+      </form>
+      <p>Email: yaminh888@gmail.com</p>
+      <p>
+        <a href="#">Facebook</a> | <a href="#">YouTube</a> | <a href="#">Instagram</a>
+      </p>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Yamin Hossan — All rights reserved.</p>
+  </footer>
 </body>
 </html>
