--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Yamin Hossan</title>
+  <link rel="stylesheet" href="style.css.text">
 </head>
 <body>
   <header>
-    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <h1 class="logo">YAMIN HOSSAN</h1>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="gig.html">Gig</a> |
-      <a href="premium.html">Premium</a> |
-      <a href="others.html">Others</a> |
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="gig.html">Gig</a>
+      <a href="premium.html">Premium</a>
+      <a href="others.html">Others</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h2>Premium T-Shirt Designs</h2>
-    <p>এখানে আমার Premium T-shirt design গুলো থাকবে, প্রতিটির সাথে বর্ণনা দেওয়া থাকবে।</p>
-    <div style="float:right;">
-      <p>আমার Fiverr প্রোফাইল:</p>
-      <img src="assets/images/fiverr-qr.png" alt="Fiverr QR" width="150">
-    </div>
+    <section>
+      <h2>Premium T-Shirt Designs</h2>
+      <p>এখানে আমার Premium T-shirt design গুলো থাকবে, প্রতিটির সাথে বর্ণনা দেওয়া থাকবে।</p>
+      <div class="qr">
+        <p>আমার Fiverr প্রোফাইল:</p>
+        <img src="fiverr_qr.png" alt="Fiverr QR" width="120">
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Yamin Hossan — All rights reserved.</p>
+  </footer>
 </body>
 </html>
