--- a/gig.html
+++ b/gig.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gig - Yamin Hossan</title>
+  <link rel="stylesheet" href="style.css.text">
 </head>
 <body>
   <header>
-    <h1 style="color:gold;">YAMIN HOSSAN</h1>
+    <h1 class="logo">YAMIN HOSSAN</h1>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="gig.html">Gig</a> |
-      <a href="premium.html">Premium</a> |
-      <a href="others.html">Others</a> |
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="gig.html">Gig</a>
+      <a href="premium.html">Premium</a>
+      <a href="others.html">Others</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h2>My Gigs</h2>
-    <p>এখানে আমার টি-শার্ট গিগ ডিজাইনগুলো থাকবে, প্রতিটির সাথে দাম দেওয়া থাকবে।</p>
-    <ul>
-      <li>T-Shirt Design 1 - $20</li>
-      <li>T-Shirt Design 2 - $25</li>
-      <li>T-Shirt Design 3 - $30</li>
-    </ul>
+    <section>
+      <h2>Gig — T-shirt Designs</h2>
+      <p>আপনি চাইলে নিচের ডিজাইনগুলো কাস্টম অর্ডার করতে পারবেন। প্রতিটি ডিজাইনের পাশে দাম দেওয়া আছে।</p>
+      <ul>
+        <li>Tee — Minimal Arabic | Price: ৳800 <button>Order</button></li>
+        <li>Tee — Islamic Pattern | Price: ৳900 <button>Order</button></li>
+        <li>Tee — Typography | Price: ৳700 <button>Order</button></li>
+      </ul>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Yamin Hossan — All rights reserved.</p>
+  </footer>
 </body>
 </html>
