--- a/gig.html
+++ b/gig.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gig - Yamin Hossan</title>
-  <link rel="stylesheet" href="style.css.text">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -20,15 +20,68 @@
   </header>
 
   <main>
-    <section>
-      <h2>Gig — T-shirt Designs</h2>
-      <p>আপনি চাইলে নিচের ডিজাইনগুলো কাস্টম অর্ডার করতে পারবেন। প্রতিটি ডিজাইনের পাশে দাম দেওয়া আছে।</p>
-      <ul>
-        <li>Tee — Minimal Arabic | Price: ৳800 <button>Order</button></li>
-        <li>Tee — Islamic Pattern | Price: ৳900 <button>Order</button></li>
-        <li>Tee — Typography | Price: ৳700 <button>Order</button></li>
-      </ul>
+    <h2>আমাদের পণ্যসমূহ (Our Products / منتجاتنا)</h2>
+
+    <!-- Product 1 -->
+    <section class="product-container">
+      <div class="product-image">
+        <img src="product1.jpg" alt="Model B.B-0001" width="300">
+      </div>
+      <div class="product-details">
+        <h2>Model No: B.B-0001</h2>
+        <p>
+          <strong>বাংলা:</strong> এটি হলো আমাদের ট্রেন্ডি হ্যান্ড বাঙলেস যা বানানো হয়েছে সুতা দিয়ে এবং এটি সত্যিই খুবই আরামদায়ক। এটি হলো বর্তমান বাংলাদেশের অন্যতম ট্রেন্ডি চুড়ি আইটেম।<br>
+          <strong>English:</strong> This is our trendy hand bangles made with thread and it is really very comfortable. It is one of the most trendy bangle items in Bangladesh today.<br>
+          <strong>العربية:</strong> هذه أساور اليد العصرية لدينا المصنوعة من الخيط وهي مريحة للغاية. إنها واحدة من أكثر الأساور العصرية في بنغلاديش اليوم.
+        </p>
+
+        <ul>
+          <li><strong>বাংলা:</strong> দাম: যেকোনো ১ পিস ১২০ টাকা। ফুল ৪ পিসের সেট মাত্র ৭৫০ টাকা।</li>
+          <li><strong>English:</strong> Price: Any 1 piece 120 BDT. Full 4-piece set only 750 BDT.</li>
+          <li><strong>العربية:</strong> السعر: أي قطعة واحدة ١٢٠ تاكا. مجموعة كاملة من ٤ قطع فقط ٧٥٠ تاكا.</li>
+        </ul>
+
+        <p><strong>Special Facility:</strong> এতে কোনো আওয়াজ হয় না, তাই এটি মুসলিম মেয়েদের জন্যও কেনা যায়।</p>
+
+        <p class="contact-text">
+          🛒 Order করতে যোগাযোগ করুন:<br>
+          Email: <a href="mailto:yaminh888@gmail.com">yaminh888@gmail.com</a><br>
+          WhatsApp: 01989615778<br>
+          অথবা <a href="contact.html">Contact Page</a> এ গিয়ে “Confirm” লিখে Send করুন।
+        </p>
+      </div>
     </section>
+
+    <!-- Product 2 -->
+    <section class="product-container">
+      <div class="product-image">
+        <img src="product2.jpg" alt="Model B.B-0002" width="300">
+      </div>
+      <div class="product-details">
+        <h2>Model No: B.B-0002</h2>
+        <p>
+          <strong>বাংলা:</strong> এটি হলো আমাদের ট্রেন্ডি হ্যান্ড বাঙলেস যা বানানো হয়েছে সুতা দিয়ে এবং এটি সত্যিই খুবই আরামদায়ক। এটি হলো বর্তমান বাংলাদেশের অন্যতম ট্রেন্ডি চুড়ি আইটেম।<br>
+          <strong>English:</strong> This is our trendy hand bangles made with thread and it is really very comfortable. It is one of the most trendy bangle items in Bangladesh today.<br>
+          <strong>العربية:</strong> هذه أساور اليد العصرية لدينا المصنوعة من الخيط وهي مريحة للغاية. إنها واحدة من أكثر الأساور العصرية في بنغلاديش اليوم.
+        </p>
+
+        <ul>
+          <li><strong>বাংলা:</strong> ২৪ সাইজের ১ সেট ২৩০ টাকা। ২৬ সাইজের সেট ২৮০ টাকা। ২৮ সাইজের সেট ৩৫০ টাকা।</li>
+          <li><strong>English:</strong> 24 size set: 230 BDT. 26 size set: 280 BDT. 28 size set: 350 BDT.</li>
+          <li><strong>العربية:</strong> المقاس ٢٤: ٢٣٠ تاكا. المقاس ٢٦: ٢٨٠ تاكا. المقاس ٢٨: ٣٥٠ تاكا.</li>
+        </ul>
+
+        <p><strong>Special Facility:</strong> এতে কোনো আওয়াজ হয় না, তাই এটি মুসলিম মেয়েদের জন্যও কেনা যায়।</p>
+
+        <p class="contact-text">
+          🛒 Order করতে যোগাযোগ করুন:<br>
+          Email: <a href="mailto:yaminh888@gmail.com">yaminh888@gmail.com</a><br>
+          WhatsApp: 01989615778<br>
+          অথবা <a href="contact.html">Contact Page</a> এ গিয়ে “Confirm” লিখে Send করুন।
+        </p>
+      </div>
+    </section>
+
   </main>
 
   <footer>
