--- a/premium.html
+++ b/premium.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Premium - Yamin Hossan</title>
-  <link rel="stylesheet" href="style.css.text">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -20,9 +20,34 @@
   </header>
 
   <main>
-    <section>
-      <h2>Premium Products</h2>
-      <p>এখানে শুধুমাত্র Premium products showcase করা হবে।</p>
+    <h2>Premium Products</h2>
+
+    <!-- Premium Product Example -->
+    <section class="product-container">
+      <div class="product-image">
+        <img src="premium1.jpg" alt="Premium Product 1" width="300">
+      </div>
+      <div class="product-details">
+        <h2>Premium Product Name</h2>
+        <p>
+          <strong>বাংলা:</strong> এটি একটি প্রিমিয়াম পণ্য, বিশেষ মানের উপকরণ দিয়ে তৈরি।<br>
+          <strong>English:</strong> This is a premium product made with special quality materials.<br>
+          <strong>العربية:</strong> هذا منتج فاخر مصنوع من مواد عالية الجودة.
+        </p>
+
+        <ul>
+          <li><strong>বাংলা:</strong> দাম: ১৫০০ টাকা</li>
+          <li><strong>English:</strong> Price: 1500 BDT</li>
+          <li><strong>العربية:</strong> السعر: ١٥٠٠ تاكا</li>
+        </ul>
+
+        <p class="contact-text">
+          🛒 Order করতে যোগাযোগ করুন:<br>
+          Email: <a href="mailto:yaminh888@gmail.com">yaminh888@gmail.com</a><br>
+          WhatsApp: 01989615778<br>
+          অথবা <a href="contact.html">Contact Page</a> এ গিয়ে “Confirm” লিখে Send করুন।
+        </p>
+      </div>
     </section>
   </main>
 
