--- a/others.html
+++ b/others.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Others - Yamin Hossan</title>
-  <link rel="stylesheet" href="style.css.text">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -20,9 +20,34 @@
   </header>
 
   <main>
-    <section>
-      <h2>Other Business Products</h2>
-      <p>এখানে আমার অন্যান্য ব্যবসার পণ্যগুলো থাকবে।</p>
+    <h2>Other Business Products</h2>
+
+    <!-- Other Product Example -->
+    <section class="product-container">
+      <div class="product-image">
+        <img src="other1.jpg" alt="Other Product 1" width="300">
+      </div>
+      <div class="product-details">
+        <h2>Other Product Name</h2>
+        <p>
+          <strong>বাংলা:</strong> এটি আমাদের অন্যান্য ব্যবসার পণ্য, দৈনন্দিন ব্যবহারের জন্য উপযোগী।<br>
+          <strong>English:</strong> This is one of our other business products, suitable for daily use.<br>
+          <strong>العربية:</strong> هذا منتج آخر من أعمالنا، مناسب للاستخدام اليومي.
+        </p>
+
+        <ul>
+          <li><strong>বাংলা:</strong> দাম: ৫০০ টাকা</li>
+          <li><strong>English:</strong> Price: 500 BDT</li>
+          <li><strong>العربية:</strong> السعر: ٥٠٠ تاكا</li>
+        </ul>
+
+        <p class="contact-text">
+          🛒 Order করতে যোগাযোগ করুন:<br>
+          Email: <a href="mailto:yaminh888@gmail.com">yaminh888@gmail.com</a><br>
+          WhatsApp: 01989615778<br>
+          অথবা <a href="contact.html">Contact Page</a> এ গিয়ে “Confirm” লিখে Send করুন।
+        </p>
+      </div>
     </section>
   </main>
 
