--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About - Yamin Hossan</title>
-  <link rel="stylesheet" href="style.css.text">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -20,11 +20,24 @@
   </header>
 
   <main>
-    <section>
-      <h2>About Me</h2>
-      <p><strong>বাংলা:</strong> আমি একজন গ্রাফিক্স ডিজাইনার। আমার যাত্রা শুরু হয়েছে প্রায় ১ বছর আগে। যদিও নতুন, তবে প্রতিদিন নতুন কিছু শেখার চেষ্টা করছি। ভবিষ্যতে আরও দক্ষ হয়ে কাজ করতে চাই।</p>
-      <p><strong>English:</strong> I am a graphics designer. My journey started about a year ago. Although I am new, I am learning more every day. My goal is to improve and grow in this field.</p>
-      <p><strong>العربية:</strong> أنا مصمم جرافيك. بدأت رحلتي منذ حوالي عام. على الرغم من أنني جديد، أحاول أن أتعلم شيئًا جديدًا كل يوم. أطمح أن أصبح أكثر مهارة في المستقبل.</p>
+    <h2>About Me</h2>
+    <section class="product-container">
+      <div class="product-image">
+        <!-- এখানে তোমার প্রোফাইল ছবি -->
+        <img src="about_me.jpg" alt="About Me" width="280">
+      </div>
+      <div class="product-details">
+        <p>
+          <strong>বাংলা:</strong> আমি একজন গ্রাফিক্স ডিজাইনার। আমার যাত্রা শুরু হয়েছে প্রায় ১ বছর আগে। যদিও নতুন, প্রতিদিন নতুন কিছু শেখার চেষ্টা করছি। আমি বিশেষভাবে টি-শার্ট ডিজাইন, ব্র্যান্ডিং, এবং অন্যান্য ক্রিয়েটিভ কাজে আগ্রহী।<br><br>
+          <strong>English:</strong> I am a graphics designer. My journey started about a year ago. Although I am new, I try to learn something new every day. I am particularly interested in T-shirt design, branding, and other creative works.<br><br>
+          <strong>العربية:</strong> أنا مصمم جرافيك. بدأت رحلتي منذ حوالي عام. على الرغم من أنني جديد، أحاول أن أتعلم شيئًا جديدًا كل يوم. أنا مهتم بشكل خاص بتصميم القمصان والعلامات التجارية والأعمال الإبداعية الأخرى.
+        </p>
+
+        <p class="contact-text">
+         
+          🌟 আশা করি আপনি হবেন আমাদের সাথী
+        </p>
+      </div>
     </section>
   </main>
 
