--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Yamin Hossan</title>
-  <link rel="stylesheet" href="style.css.text">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -20,14 +20,35 @@
   </header>
 
   <main>
-    <section>
-      <h2>Premium T-Shirt Designs</h2>
-      <p>এখানে আমার Premium T-shirt design গুলো থাকবে, প্রতিটির সাথে বর্ণনা দেওয়া থাকবে।</p>
-      <div class="qr">
-        <p>আমার Fiverr প্রোফাইল:</p>
-        <img src="fiverr_qr.png" alt="Fiverr QR" width="120">
+    <h2>Welcome to My Website</h2>
+    <section class="product-container">
+      <div class="product-image">
+        <!-- এখানে হোমপেজ ছবি (যেমন T-shirt বা Banner) -->
+        <img src="home_banner.jpg" alt="Home Banner" width="350">
+      </div>
+      <div class="product-details">
+        <h2>আমার Premium T-shirt Collection</h2>
+        <p>
+          <strong>বাংলা:</strong> এখানে আপনি পাবেন আমার তৈরি করা Premium টি-শার্ট ডিজাইন। প্রতিটি ডিজাইন ইউনিক এবং মানসম্মত।<br>
+          <strong>English:</strong> Here you will find my premium T-shirt designs. Each design is unique and high-quality.<br>
+          <strong>العربية:</strong> هنا ستجد تصاميمي المميزة للقمصان. كل تصميم فريد وعالي الجودة.
+        </p>
+        <ul>
+          <li><strong>বাংলা:</strong> দাম শুরু ৭৫০ টাকা থেকে</li>
+          <li><strong>English:</strong> Price starts from 750 BDT</li>
+          <li><strong>العربية:</strong> السعر يبدأ من ٧٥٠ تاكا</li>
+        </ul>
+
+        <p class="contact-text">
+          👉 আরও দেখতে যান <a href="gig.html">Gig Page</a>
+        </p>
       </div>
     </section>
+
+    <div class="qr" style="margin-top:40px;">
+      <p>আমার Fiverr প্রোফাইল:</p>
+      <img src="fiverr_qr.png" alt="Fiverr QR" width="120">
+    </div>
   </main>
 
   <footer>
